--- a/web/static/map_path_viewer/index.html
+++ b/web/static/map_path_viewer/index.html
@@ -36,12 +36,93 @@
   <div id="map"></div>
 
   <script>
+    // ====== 坐标系转换：WGS84 -> GCJ02 ======
+    const PI = Math.PI;
+    const A = 6378245.0;
+    const EE = 0.00669342162296594323;
+
+    function outOfChina(lat, lon) {
+      return lon < 72.004 || lon > 137.8347 || lat < 0.8293 || lat > 55.8271;
+    }
+
+    function transformLat(x, y) {
+      let ret =
+        -100.0 +
+        2.0 * x +
+        3.0 * y +
+        0.2 * y * y +
+        0.1 * x * y +
+        0.2 * Math.sqrt(Math.abs(x));
+      ret +=
+        ((20.0 * Math.sin(6.0 * x * PI) +
+          20.0 * Math.sin(2.0 * x * PI)) *
+          2.0) /
+        3.0;
+      ret +=
+        ((20.0 * Math.sin(y * PI) +
+          40.0 * Math.sin((y / 3.0) * PI)) *
+          2.0) /
+        3.0;
+      ret +=
+        ((160.0 * Math.sin((y / 12.0) * PI) +
+          320 * Math.sin((y * PI) / 30.0)) *
+          2.0) /
+        3.0;
+      return ret;
+    }
+
+    function transformLon(x, y) {
+      let ret =
+        300.0 +
+        x +
+        2.0 * y +
+        0.1 * x * x +
+        0.1 * x * y +
+        0.1 * Math.sqrt(Math.abs(x));
+      ret +=
+        ((20.0 * Math.sin(6.0 * x * PI) +
+          20.0 * Math.sin(2.0 * x * PI)) *
+          2.0) /
+        3.0;
+      ret +=
+        ((20.0 * Math.sin(x * PI) +
+          40.0 * Math.sin((x / 3.0) * PI)) *
+          2.0) /
+        3.0;
+      ret +=
+        ((150.0 * Math.sin((x / 12.0) * PI) +
+          300.0 * Math.sin((x / 30.0) * PI)) *
+          2.0) /
+        3.0;
+      return ret;
+    }
+
+    function wgs84ToGcj02(lat, lon) {
+      if (outOfChina(lat, lon)) {
+        return [lat, lon];
+      }
+      let dLat = transformLat(lon - 105.0, lat - 35.0);
+      let dLon = transformLon(lon - 105.0, lat - 35.0);
+      let radLat = (lat / 180.0) * PI;
+      let magic = Math.sin(radLat);
+      magic = 1 - EE * magic * magic;
+      let sqrtMagic = Math.sqrt(magic);
+      dLat =
+        (dLat * 180.0) /
+        (((A * (1 - EE)) / (magic * sqrtMagic)) * PI);
+      dLon =
+        (dLon * 180.0) /
+        ((A / sqrtMagic) * Math.cos(radLat) * PI);
+      return [lat + dLat, lon + dLon];
+    }
+
     // ====== 1. 初始化地图 ======
     const map = L.map('map');
 
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      maxZoom: 19,
-      attribution: '© OpenStreetMap contributors'
+    L.tileLayer('https://webrd0{s}.is.autonavi.com/appmaptile?lang=zh_cn&size=1&scale=1&style=8&x={x}&y={y}&z={z}', {
+      subdomains: ['1','2','3','4'],
+      attribution: '高德地图',
+      maxZoom: 18
     }).addTo(map);
 
     // ====== 2. 图层容器（用于清理） ======
@@ -52,6 +133,16 @@
       const data = e.data?.routeTableData;
       if (!Array.isArray(data) || data.length === 0) {
         return;
+      }
+
+      for (const item of data) {
+        // 坐标系转换
+        const [lat, lon] = wgs84ToGcj02(
+          item.latitude,
+          item.longitude
+        );
+        item.latitude = lat;
+        item.longitude = lon;
       }
 
       // 清理旧路线
