--- a/web/static/map_path_viewer/index.html
+++ b/web/static/map_path_viewer/index.html
@@ -6,11 +6,11 @@
   <title>map path viewer</title>
 
   <!-- Leaflet -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+  <link rel="stylesheet" href="leaflet.css" />
+  <script src="leaflet.js"></script>
 
   <!-- Polyline Decorator（箭头） -->
-  <script src="https://unpkg.com/leaflet-polylinedecorator@1.6.0/dist/leaflet.polylineDecorator.js"></script>
+  <script src="leaflet.polylineDecorator.js"></script>
 
   <style>
     html,
